# wavespectra

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  spectra.py  test.py  timer.py  tox.ini
.github/workflows/: codecov.yml  docker-publish.yml  python-publish.yml  testing.yml
docs/: Makefile  api.rst  authors.rst  cli.rst  conf.py  construction.rst  construction_2d.rst  contributing.rst  conventions.rst  fitting.rst  fitting_1d.rst  fitting_2d.rst  gallery.rst  history.rst  index.rst  input.rst  install.rst  installation.rst  io-input.rst  io-output.rst  library.rst  make.bat  migration.rst  octopusfile.oct  output.rst  partitioning.rst  plotting.rst  quickstart.rst  reconstruct.rst  reconstruction.rst  selecting.rst  sg_execution_times.rst  specfile.swn  spectral_energy_and_bins.rst  support.rst  wavespectra.rst  zieger.rst
docs/_static/: era5file.nc  ww3file.nc  wwmfile.nc
docs/gallery/: plot_clean_axis.py  plot_default.py  plot_faceting.py  plot_from_bins_to_continuous.py  plot_hs.py  plot_spectra_contour.py  plot_spectra_contourf.py  plot_spectra_linear_radii.py  plot_spectra_log_energy_density.py  plot_spectra_manual_log_levels.py  plot_spectra_non_normalised.py  plot_spectra_pcolormesh.py  plot_spectra_period.py  plot_spectra_real_values.py  plot_spectra_slice_radius.py  plot_spectra_timeseries.py  plot_spectra_xarray_params.py  plot_split_sea_swell.py  plot_watershed_sea_swell.py  spec_to_orcaflex.py
docs/source/: modules.rst  wavespectra.construct.rst  wavespectra.core.rst  wavespectra.input.rst  wavespectra.output.rst  wavespectra.rst
pyspectra/: iospec.py  legacy.py  spectra.py
pyspectra/io/: __init__.py  attributes.py  netcdf.py  octopus.py  swan.py  ww3.py  ww3_msl.py
pyspectra/tests/: test_ww3.py  test_ww3native.py
requirements/: default.txt  extra.txt  metocean.txt  requirements_dev.txt  requirements_doc.txt  requirements_tox.txt  test.txt
spectra/: __init__.py  attributes.py  attributes.yml  misc.py  readspec.py  specarray.py  specdataset.py  swan.py
spectra/construct/: __init__.py  helpers.py  jonswap.py  ochihubble.py
spectra/core/: misc.py  swan.py
spectra/input/: json.py  netcdf.py  octopus.py  swan.py  ww3.py  ww3_msl.py
spectra/io/: __init__.py  attributes.py  cfjson.py  json.py  netcdf.py  octopus.py  specplot.py  swan.py  ww3.py  ww3_msl.py
spectra/output/: json.py  netcdf.py  octopus.py  swan.py  swan_ascii.py  ww3.py  ww3_msl.py
spectra/specpart/: specpart-f2pywrappers2.f90  specpart.pyf
tests/: simple_test.py  swanfile.tab  test_cli.py  test_combine_hp01.py  test_construct.py  test_cookiecutter_template.py  test_direction_distribution.py  test_directional.py  test_directional_distribution.py  test_io.py  test_newold.py  test_partition.py  test_reader_registry.py  test_specarray.py  test_specdataset.py  test_ww3.py  test_ww3native.py  very_simple_test.py  ww3mslfile.nc
tests/broken/: test_construct.py  test_io.py  test_newold.py  timer.py
tests/construct/: test_conditional.py  test_construct.py  test_direction.py  test_gaussian.py  test_jonswap.py  test_pierson_moskowitz.py  test_tma.py
tests/core/: test_construct.py  test_convert_bins_to_continuous.py  test_convert_bins_to_continuous_alt.py  test_core.py  test_dset_wrapper.py  test_frequency_bin_information.py  test_npstats.py  test_plot.py  test_regrid.py  test_sel.py  test_watershed.py  test_wave_stats.py  test_xrstats.py
tests/fit/: test_conditional.py  test_gaussian.py  test_jonswap.py  test_pierson_moskowitz.py  test_tma.py
tests/io/: test_argoss_csv.py  test_awac.py  test_backends.py  test_chunk_naming.py  test_datawell.py  test_fugro_csv.py  test_funwave.py  test_io.py  test_json.py  test_ncswan.py  test_ndbc.py  test_obscape.py  test_octopus.py  test_spotter.py  test_swan_ascii.py  test_to_orcaflex.py  test_triaxys.py  test_ww3_station.py
tests/sample_files/: ARGOSS_example2.csv  FUGRO_example2.csv  Octopus_example.csv  funwave_new_file.txt  funwavefile.txt  invalid_file.txt  jsonfile.json  nortec_awac.nmea  octopusfile.oct  spotter_20180214.json  spotter_20210929.csv  spotter_20210929b.csv  swanfile.nc  swanfile.spec  swanfile.txt  swanhot.spec  triaxys.DIRSPEC  triaxys.NONDIRSPEC  wavespectra.nc  ww3station.spec
tests/sample_files/datawell/: buoy}2024-09-09T01h15Z.spt  buoy}2024-09-09T01h44Z.spt
tests/sample_files/ndbc/: 41010.data_spec  41010.data_spec.REMOVED.git-id  41010.spec  41010.swdir  41010.swdir.REMOVED.git-id  41010.swdir2  41010.swdir2.REMOVED.git-id  41010.swr1  (+10 more)
tests/specarray/: test_wave_stats.py
wavespectra/: __init__.py  cli.py  construct.py  directional.py  directional_distribution.py  newplot.py  old_plot.py  partition.py  plot.py  specarray.py  specdataset.py
wavespectra/construct/: __init__.py  direction.py  frequency.py  gaussian.py  helpers.py  jonswap.py  ochihubble.py
wavespectra/core/: __init__.py  attributes.py  attributes.yml  fitting.py  misc.py  npstats.py  npstats_numba.py  options.py  peak.py  pwatershednew.py  select.py  specpartpy.py  swan.py  timer.py  utils.py  watershed.py  watershed2.py  watershed2c.py  watershed3.py  xrstats.py
wavespectra/fit/: __init__.py  conditional.py  directional_distribution.py  gaussian.py  gaussian_conditional.py  jonswap.py  ochihubble.py  pierson_moskowitz.py  specfit.py  tma.py
wavespectra/input/: __init__.py  argoss_csv.py  awac.py  cf_json.py  cfjson.py  dataset.py  datawell.py  dictionary.py  era5.py  fugro_csv.py  funwave.py  funwave_new.py  json.py  ncswan.py  ndbc.py  ndbc_ascii.py  netcdf.py  obscape.py  octopus.py  spotter.py  swan.py  triaxys.py  wavespectra.py  ww3.py  ww3_msl.py  ww3_station.py  wwm.py  xwaves.py
wavespectra/output/: __init__.py  cf_json.py  funwave.py  json.py  netcdf.py  octopus.py  orcaflex.py  swan.py  ww3.py  ww3.yml  ww3_msl.py
wavespectra/partition/: hanson_and_phillips_2001.py  partition.py  tracking.py  utils.py  watershed.py  watershed_depracate.py
(+46 files in other folders)
