[build-system]
requires = ["numpy", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wavespectra"
description = "Library for ocean wave spectra"
readme = "README.rst"
license = { file = "LICENSE.txt" }
keywords = ["wave", "spectra", "ocean", "xarray", "statistics", "analysis"]
authors = [
  { name = "Wavespectra Developers", email="r.guedes@oceanum.science" },
]
maintainers = [
  {name = "Rafael Guedes", email = "r.guedes@oceanum.science"},
  {name = "Tom Durrant", email = "t.durrant@oceanum.science"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9"
dependencies = [
    "click",
    "dask",
    "matplotlib",
    # Linked by the compiled specpart extension via the numpy C API, so it is
    # declared explicitly rather than relying on it arriving transitively.
    "numpy",
    "python-dateutil",
    "pyyaml",
    "sortedcontainers",
    "scipy",
    "xarray",
]
dynamic = ["version"]

[project.urls]
"Documentation" = "https://wavespectra.readthedocs.io/en/latest/"
"Source" = "https://github.com/wavespectra/wavespectra"
"Tracker" = "https://github.com/wavespectra/wavespectra/issues"
"Changelog" = "https://github.com/wavespectra/wavespectra/blob/master/HISTORY.rst"

[project.scripts]
wavespectra = "wavespectra.cli:main"

[project.entry-points."xarray.backends"]
awac = "wavespectra.input.awac:AWACBackendEntrypoint"
datawell = "wavespectra.input.datawell:DatawellBackendEntrypoint"
era5 = "wavespectra.input.era5:ERA5BackendEntrypoint"
funwave = "wavespectra.input.funwave:FunwaveBackendEntrypoint"
funwave_new = "wavespectra.input.funwave_new:FunwaveNewBackendEntrypoint"
json = "wavespectra.input.json:JsonBackendEntrypoint"
ncswan = "wavespectra.input.ncswan:NCSwanBackendEntrypoint"
ndbc = "wavespectra.input.ndbc:NDBCBackendEntrypoint"
ndbc_ascii = "wavespectra.input.ndbc_ascii:NDBCASCIIBackendEntrypoint"
netcdf = "wavespectra.input.netcdf:NetCDFBackendEntrypoint"
obscape = "wavespectra.input.obscape:ObscapeBackendEntrypoint"
octopus = "wavespectra.input.octopus:OctopusBackendEntrypoint"
spotter = "wavespectra.input.spotter:SpotterBackendEntrypoint"
swan = "wavespectra.input.swan:SWANBackendEntrypoint"
triaxys = "wavespectra.input.triaxys:TRIAXYSBackendEntrypoint"
wavespectra = "wavespectra.input.wavespectra:WavespectraBackendEntrypoint"
wwm = "wavespectra.input.wwm:WWMBackendEntrypoint"
ww3 = "wavespectra.input.ww3:WW3BackendEntrypoint"
ww3_station = "wavespectra.input.ww3_station:WW3StationBackendEntrypoint"
xwaves = "wavespectra.input.xwaves:XWavesBackendEntrypoint"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-timeout", "ruff"]
extra = [
    "fsspec",
    "gcsfs",
    "h5netcdf",
    "netCDF4",
    "tbump",
    "zarr",
]
docs = [
    "cmocean",
    "ipython",
    "pickleshare",
    "pydata_sphinx_theme",
    "sphinxcontrib-programoutput",
    "sphinx-book-theme",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-gallery",
]

[tool.setuptools.packages.find]
# Explicit include so stray top-level directories created at build time
# (e.g. cibuildwheel's wheelhouse/) don't break flat-layout auto-discovery.
include = ["wavespectra*"]

[tool.setuptools.package-data]
"wavespectra.core" = ["*.yml"]
"wavespectra.output" = ["*.yml"]
"wavespectra.partition.specpart" = ["specpart.c", "specpart.h", "specpart_wrap.c"]

[tool.setuptools.dynamic]
version = {attr = "wavespectra.__version__"}

[tool.cibuildwheel]
# CPython versions matching the supported range in the classifiers.
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
# 64-bit only: 32-bit Windows wheels would be built by default, but core
# dependencies (e.g. matplotlib) no longer ship win32 wheels to test against.
archs = ["auto64"]
# Skip musl-based linux; can be added later if there is demand.
skip = ["*-musllinux*"]
# Test every built wheel by running the partition test module, which
# exercises the compiled specpart extension end to end.
test-requires = ["pytest", "netCDF4"]
test-command = "pytest {project}/tests/test_partition.py -q"
build-verbosity = 1

[tool.pytest.ini_options]
norecursedirs = [".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg", "venv", "broken"]
filterwarnings = [
    # netCDF4-python sets the .shape attribute on numpy arrays, which numpy
    # 2.5 deprecated; it surfaces through xarray's netCDF4 backend whenever a
    # netCDF file is written. Third-party issue, nothing to fix in wavespectra.
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
# B015/B018: flag comparisons/expressions whose result is discarded, which in
# tests almost always means a forgotten `assert`.
extend-select = ["B015", "B018"]

[tool.ruff.lint.extend-per-file-ignores]
"wavespectra/__init__.py" = ["F401"]
"wavespectra/specdataset.py" = ["F401"]
"wavespectra/input/ww3.py" = ["F401"]
"wavespectra/input/triaxys.py" = ["F401"]
"wavespectra/input/wwm.py" = ["F401"]
"wavespectra/input/netcdf.py" = ["F401"]
"wavespectra/input/ncswan.py" = ["F401"]
"wavespectra/input/spotter.py" = ["F401"]
"wavespectra/input/dataset.py" = ["F401"]
"wavespectra/input/swan.py" = ["F401"]
"wavespectra/construct/__init__.py" = ["F401"]
"wavespectra/construct/direction.py" = ["F401"]
"wavespectra/construct/frequency.py" = ["F401"]
"wavespectra/input/funwave.py" = ["F401"]
"wavespectra/input/funwave_new.py" = ["F401"]
"wavespectra/input/ndbc.py" = ["F401"]
"wavespectra/input/ndbc_ascii.py" = ["F401"]
"wavespectra/input/octopus.py" = ["F401"]
"wavespectra/input/wavespectra.py" = ["F401"]
"wavespectra/input/xwaves.py" = ["F401"]

[tool.tbump]
github_url = "https://github.com/wavespectra/wavespectra/"

[tool.tbump.version]
current = "4.7.0"
regex = '''
  (?P<major>\d+)
  \.(?P<minor>\d+)
  \.(?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "wavespectra/__init__.py"